# mcptool

./: Cargo.toml
crates/libmcptool/: Cargo.toml  build.rs
crates/libmcptool/src/: args.rs  client.rs  command.rs  connect.rs  error.rs  lib.rs  mcp.rs  proxy.rs  storage.rs  target.rs  testserver.rs  utils.rs
crates/libmcptool/src/auth/: add.rs  mod.rs
crates/libmcptool/src/calltool/: cmdline.rs  interactive.rs  json.rs  mod.rs
crates/libmcptool/src/output/: calltool.rs  complete.rs  formatter.rs  getprompt.rs  initresult.rs  listprompts.rs  listresources.rs  listresourcetemplates.rs  listtools.rs  mod.rs  readresource.rs
crates/libmcptool/tests/: auth_integration.rs  ipv6_connectivity.rs  json_output.rs  json_syntax_highlighting.rs  mcp_init_integration.rs  notification_integration.rs  tcp_connectivity.rs
crates/mcptool/: Cargo.toml
crates/mcptool/src/: main.rs
