[package]
name = "libmcptool"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
tmcp.workspace = true

anyhow.workspace = true
async-trait.workspace = true
atty.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
oauth2.workspace = true
open.workspace = true
reqwest.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
syntect.workspace = true
terminal_size.workspace = true
termcolor.workspace = true
textwrap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen-gix.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
