[package]
name = "mcptool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libmcptool.workspace = true
tmcp.workspace = true

atty.workspace = true
clap.workspace = true
dirs.workspace = true
terminal_size.workspace = true
tokio.workspace = true

[lints]
workspace = true
